--- a/exchanger/package.json
+++ b/exchanger/package.json
@@ -1,6 +1,7 @@
 {
   "name": "exchanger",
   "version": "0.1.0",
+  "homepage": ".",
   "private": true,
   "dependencies": {
     "@chakra-ui/react": "^2.8.2",
@@ -42,5 +43,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react": "^18.2.74"
   }
 }
